# rustyrag

./: .env.example  .gitignore  Cargo.toml  PLAN.md  docker-compose.yaml
configs/pipelines/: docs-index-semantic.yaml  docs-index.yaml
configs/rag/: default.yaml
crates/rustyrag-adapters/: Cargo.toml
crates/rustyrag-adapters/src/: bm25.rs  chunker.rs  embedder.rs  factory.rs  lib.rs  llm.rs  ollama.rs  parser.rs  semantic_chunker.rs  source.rs  store.rs
crates/rustyrag-api/: Cargo.toml
crates/rustyrag-api/src/: lib.rs  routes.rs  state.rs
crates/rustyrag-cli/: Cargo.toml
crates/rustyrag-cli/src/: main.rs
crates/rustyrag-config/: Cargo.toml
crates/rustyrag-config/src/: env.rs  lib.rs  pipeline.rs  rag.rs  registry.rs  validate.rs
crates/rustyrag-core/: Cargo.toml
crates/rustyrag-core/src/: document.rs  error.rs  lib.rs  traits.rs
crates/rustyrag-etl/: Cargo.toml
crates/rustyrag-etl/src/: lib.rs  runner.rs  state.rs
data/docs/: getting-started.md  test-medium.md
