[package]
name = "rustyrag-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
futures-util.workspace = true
rustyrag-adapters = { path = "../rustyrag-adapters" }
rustyrag-config = { path = "../rustyrag-config" }
rustyrag-core = { path = "../rustyrag-core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tower.workspace = true
tracing.workspace = true
