[package]
name = "rustyrag-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "rustyrag"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
rustyrag-adapters = { path = "../rustyrag-adapters" }
rustyrag-api = { path = "../rustyrag-api" }
rustyrag-config = { path = "../rustyrag-config" }
rustyrag-etl = { path = "../rustyrag-etl" }
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
