[package]
name = "rustyrag-config"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
regex.workspace = true
rustyrag-core = { path = "../rustyrag-core" }
serde.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tracing.workspace = true
dotenvy.workspace = true
