[package]
name = "rustyrag-etl"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
rustyrag-adapters = { path = "../rustyrag-adapters" }
rustyrag-config = { path = "../rustyrag-config" }
rustyrag-core = { path = "../rustyrag-core" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tracing.workspace = true
